src/parser/snapshots/rbx_rsml__parser__tests__macro_assignment_return_args.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Macro {
        declaration: Node {
            token: SpannedToken(
                0,
                MacroDeclaration,
                6,
            ),
            leading_trivia: None,
        },
        name: Some(
            Node {
                token: SpannedToken(
                    7,
                    Identifier(
                        "Scale",
                    ),
                    12,
                ),
                leading_trivia: None,
            },
        ),
        args: Some(
            Delimited {
                left: Node {
                    token: SpannedToken(
                        12,
                        ParensOpen,
                        13,
                    ),
                    leading_trivia: None,
                },
                content: Some(
                    [
                        Node {
                            node: Node {
                                token: SpannedToken(
                                    13,
                                    MacroArgIdentifier(
                                        Some(
                                            "x",
                                        ),
                                    ),
                                    15,
                                ),
                                leading_trivia: None,
                            },
                        },
                    ],
                ),
                right: Some(
                    Node {
                        token: SpannedToken(
                            15,
                            ParensClose,
                            16,
                        ),
                        leading_trivia: None,
                    },
                ),
            },
        ),
        return_type: Some(
            (
                Node {
                    token: SpannedToken(
                        17,
                        ReturnArrow,
                        19,
                    ),
                    leading_trivia: None,
                },
                Some(
                    Node {
                        token: SpannedToken(
                            20,
                            Identifier(
                                "Assignment",
                            ),
                            30,
                        ),
                        leading_trivia: None,
                    },
                ),
            ),
        ),
        body: Some(
            MacroBody {
                open: Node {
                    token: SpannedToken(
                        31,
                        ScopeOpen,
                        32,
                    ),
                    leading_trivia: None,
                },
                content: Assignment(
                    Some(
                        Node {
                            node: Node {
                                token: SpannedToken(
                                    33,
                                    MacroArgIdentifier(
                                        Some(
                                            "x",
                                        ),
                                    ),
                                    35,
                                ),
                                leading_trivia: None,
                            },
                        },
                    ),
                ),
                close: Some(
                    Node {
                        token: SpannedToken(
                            36,
                            ScopeClose,
                            37,
                        ),
                        leading_trivia: None,
                    },
                ),
            },
        ),
    },
]
